Added installation instructions

--- a/README
+++ b/README
@@ -1,1 +1,14 @@
 Moneylog Cloud Chrome Extension é a forma mais fácil de ter seu Moneylog à mão sempre que você precisar.
+
+Como usar?
+----------
+
+Por enquanto a extensão está em desenvolvimento, ainda não foi publicada na Chrome Web Store. Para instalar siga os seguintes passos:
+
+1. Clone o repositório
+2. Acesse chrome://extensions
+3. Selecione o campo "Developer mode"
+4. Clique em "Load unpacked extension..."
+5. Selecione a pasta onde fica o arquivo "manifest.json". (Dentro do repositório, na pasta "moneylog-cloud-chrome-extension")
+6. Profit! =)
+
